--- a/index.bib
+++ b/index.bib
@@ -1,8 +1,55 @@
+@ARTICLE{7827078,
+	author={G. {Salvaneschi} and S. {Proksch} and S. {Amann} and S. {Nadi} and M. {Mezini}},
+	journal={IEEE Transactions on Software Engineering},
+	title={On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study},
+	year={2017},
+	volume={43},
+	number={12},
+	pages={1125-1143},
+	keywords={functional languages;object-oriented languages;object-oriented programming;object-oriented languages;software comprehension;functional languages;observer design pattern;program comprehension;reactive languages;reactive programming;Programming;Runtime;Software development;Robot sensing systems;Reactive programming;empirical study;controlled experiment;software comprehension},
+	doi={10.1109/TSE.2017.2655524},
+	ISSN={},
+	month={Dec},}
 
-@book{Author:Year:Abbr:1111111,
- author = {Authors},
- title = {Title},
- year = {Year},
- isbn = {isbn},
- publisher = {Publisher},
+@book{gamma1995design,
+	title={Design patterns: elements of reusable object-oriented software},
+	author={Gamma, Erich},
+	year={1995},
+	publisher={Pearson Education India}
 }
+
+@article{kapferer:2019:empirical,
+	author={S. Kapferer},
+	title={Empirical Research in Software Engineering},
+	year={2019},
+	keywords={Empirical Research Strategies;Software Engineering;Surveys;Case Studies;Experiments},
+}
+
+@ARTICLE{2019arXiv190805986H,
+	author = {{Hasselbring}, Wilhelm and {Carr}, Leslie and {Hettrick}, Simon and
+		{Packer}, Heather and {Tiropanis}, Thanassis},
+	title = "{FAIR and Open Computer Science Research Software}",
+	journal = {arXiv e-prints},
+	keywords = {Computer Science - Software Engineering},
+	year = "2019",
+	month = "Aug",
+	eid = {arXiv:1908.05986},
+	pages = {arXiv:1908.05986},
+	archivePrefix = {arXiv},
+	eprint = {1908.05986},
+	primaryClass = {cs.SE},
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190805986H},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{wilkinson:2016,
+	author={{Wilkinson}, M. D. et al.},
+	title="{The FAIR Guiding Principles for scientific data management and stewardship}",
+	journal={Scientific Data},
+	doi={10.1038/sdata.2016.18},
+	volume={3},
+	year={2016},
+	month={03},
+	date={15},
+}
+
