--- a/index.bib
+++ b/index.bib
@@ -25,6 +25,13 @@
 	keywords={Empirical Research Strategies;Software Engineering;Surveys;Case Studies;Experiments},
 }
 
+@article{balestra:2019:designscience:articactandcontext,
+	author={S. Balestra},
+	title={Design Science Methodology according to Roel J. Wieringa: A summary and application to a software project},
+	year={2019},
+	pages={2-3},
+}
+
 @ARTICLE{2019arXiv190805986H,
 	author = {{Hasselbring}, Wilhelm and {Carr}, Leslie and {Hettrick}, Simon and
 		{Packer}, Heather and {Tiropanis}, Thanassis},
@@ -53,3 +60,15 @@
 	date={15},
 }
 
+@ARTICLE{159342,
+	author={},
+	journal={IEEE Std 610.12-1990},
+	title={IEEE Standard Glossary of Software Engineering Terminology},
+	year={1990},
+	volume={},
+	number={},
+	pages={1-84},
+	keywords={glossaries;software engineering;standards;IEEE Std 610.12-1990;standard glossary;software engineering terminology;Terminology;Software engineering;Standards;glossary;terminology;dictionary;Software engineering;Definitions},
+	doi={10.1109/IEEESTD.1990.101064},
+	ISSN={},
+	month={Dec},}
