--- a/index.tex
+++ b/index.tex
@@ -1,11 +1,11 @@
-\documentclass[12pt,a4paper,twocolumn]{article}
+\documentclass[11pt,a4paper,twocolumn]{article}
 \usepackage{ccicons}
 \usepackage{hyperref}
 
 \begin{document}
 \twocolumn[{
 		\begin{centering}
-			\huge{tbd. Design Sciences \& Empirical Software Engineering / Reactive Programming}
+			\huge{tbd. Design Sciences and Empirical Software Engineering / Reactive Programming}
 			\par
 			\vspace{2ex}
 
@@ -36,9 +36,29 @@
 	}]
 
 	\section{Introduction}
-	Software engineering provides patterns to solve recurring problems with proved and tested solutions. However, it is rare that a given problem must always be solved with exactly \emph{one} solution. Salvaneschi et al. \cite{7827078} examine reactive programming \emph{(RP)} as an alternative to the observer pattern \cite{gamma1995design} and its impact on source code comprehensibility.
+	Software engineering provides patterns to solve recurring problems with proved and tested solutions \cite{159342}. However, it is rare that a given problem must always be solved with exactly \emph{one} solution. Salvaneschi et al. \cite{7827078} examine reactive programming \emph{(RP)} as an alternative to the observer pattern \cite{gamma1995design} and its impact on source code comprehensibility.
 
-	\dots{more intro}
+	We will examine the artifact \textbf{A1} \cite{balestra:2019:designscience:articactandcontext} \emph{On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study} by Salvaneschi et al. \cite{7827078} and answer two sets of questions within this paper. \textbf{Q1} considers the knowledge context \cite{balestra:2019:designscience:articactandcontext} of design sciences and empirical software engineering methods, approaches and concepts:
+
+	\begin{itemize}
+		\item \textbf{Q1.1}: Which empirical research methods, approaches and concepts were applied?
+		\item \textbf{Q1.2}: Are these research methods, approaches and concepts applied well, what could have been done better?
+		\item \textbf{Q1.3}: Does the paper meet FAIR principles \cite{2019arXiv190805986H} \cite{wilkinson:2016}?
+	\end{itemize}
+
+	\textbf{A1} further compares RP with an equivalent from object oriented programming \emph{(OOP)}, \textbf{Q2} therefor evaluates questions related to the software engineering context:
+
+	\begin{itemize}
+		\item \textbf{Q2.1}: How does the paper define RP and OOP?
+		\item \textbf{Q2.2}: When should RP be considered, and when not?
+		\item \textbf{Q2.3}: Which experiments should be conducted in future work?
+		\item \textbf{Q2.4}: Which design alternatives exist (in a particular application context)?
+	\end{itemize}
+
+	In the following we will introduce and define important terms. Section 2 and 3 will examine \textbf{A1} and answer \textbf{Q1} and \textbf{Q2.1}. \textbf{Q2.2} through \textbf{Q2.4} will be tackled in section 4 where we discuss previous findings.
+
+	\subsection{Design sciences and empirical software engineering}
+	What are those? Why in this paper?
 
 	\subsection{Reactive programming}
 	What is it? Why?
@@ -46,16 +66,15 @@
 	\subsection{Observer pattern}
 	What is it? Why?
 
-	\subsection{Design sciences \& empirical software engineering}
-	What are those? Why in this paper?
-
-	\section{Review}
+	\section{Artifact Review}
 	I will assess the paper by Salvaneschi et al. \cite{7827078} in regards of the following aspects:
 	\begin{itemize}
 		\item Applied scientific methods (foundation by Kapferer \cite{kapferer:2019:empirical} and others tbd.)
 		\item Study setup
 		\item Challenge with FAIR Principles \cite{2019arXiv190805986H} \cite{wilkinson:2016}
 	\end{itemize}
+
+
 
 	\section{Results}
 	Is the conclusion of Salvaneschi et al. \cite{7827078} reasonable and well argued?
