--- a/index.bib
+++ b/index.bib
@@ -72,3 +72,16 @@
 	doi={10.1109/IEEESTD.1990.101064},
 	ISSN={},
 	month={Dec},}
+
+@INPROCEEDINGS{8051350,
+author={R. {Mohanani} and P. {Ram} and A. {Lasisi} and P. {Ralph} and B. {Turhan}},
+booktitle={2017 43rd Euromicro Conference on Software Engineering and Advanced Applications (SEAA)},
+title={Perceptions of Creativity in Software Engineering Research and Practice},
+year={2017},
+volume={},
+number={},
+pages={210-217},
+keywords={software engineering;software engineering research;requirements engineering;knowledge transfer;systematic mapping study;SE research literature;semi-structured interviews;evidence-based techniques;Creativity;Interviews;Software engineering;Systematics;Software;Communications technology;Visualization;creativity;interviews;systematic mapping;software engineering},
+doi={10.1109/SEAA.2017.21},
+ISSN={},
+month={Aug},}
