--- a/index.tex
+++ b/index.tex
@@ -36,9 +36,11 @@
 	}]
 
 	\section{Introduction}
-	Software engineering provides patterns to solve recurring problems with proved and tested solutions \cite{159342}. However, it is rare that a given problem must always be solved with exactly \emph{one} solution. Salvaneschi et al. \cite{7827078} examine reactive programming \emph{(RP)} as an alternative to the observer pattern \cite{gamma1995design} and its impact on source code comprehensibility.
+	Software engineering uses engineering principles when working with a software artifact \cite{159342} throughout its life cycle. Although \emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software} \cite{159342} may restrain us methodically, it is agreed upon that the process leading to a solution is of creative nature \cite{8051350}.
 
-	We will examine the artifact \textbf{A1} \cite{balestra:2019:designscience:articactandcontext} \emph{On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study} by Salvaneschi et al. \cite{7827078} and answer two sets of questions within this paper. \textbf{Q1} considers the knowledge context \cite{balestra:2019:designscience:articactandcontext} of design sciences and empirical software engineering methods, approaches and concepts:
+	Solving unique problems through the application of software engineering principles does not automatically lead to unique solutions in general. In fact, the emergence of recurring design patterns can be observed. Salvaneschi et al. \cite{7827078} challenge the observer pattern \cite{gamma1995design} and its impact on source code comprehensibility in comparison to the usage of reactive programming \emph{(RP)}.
+
+	We will examine the artifact \cite{balestra:2019:designscience:articactandcontext} \textbf{A1} \emph{On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study} by Salvaneschi et al. \cite{7827078} and answer two sets of questions within this paper. \textbf{Q1} considers design sciences and empirical software engineering methods, approaches and concepts as knowledge context \cite{balestra:2019:designscience:articactandcontext}:
 
 	\begin{itemize}
 		\item \textbf{Q1.1}: Which empirical research methods, approaches and concepts were applied?
@@ -46,7 +48,7 @@
 		\item \textbf{Q1.3}: Does the paper meet FAIR principles \cite{2019arXiv190805986H} \cite{wilkinson:2016}?
 	\end{itemize}
 
-	\textbf{A1} further compares RP with an equivalent from object oriented programming \emph{(OOP)}, \textbf{Q2} therefor evaluates questions related to the software engineering context:
+	As \textbf{A1} compares RP with the observer pattern \cite{gamma1995design}, an equivalent to RP in object oriented programming \emph{(OOP)}, \textbf{Q2} states questions under the software engineering context:
 
 	\begin{itemize}
 		\item \textbf{Q2.1}: How does the paper define RP and OOP?
