Try fix gh-actions build

--- a/index.tex
+++ b/index.tex
@@ -69,6 +69,8 @@
 	What is it? Why?
 
 	\section{Artifact Review}
+	Will not do: Review on statistic
+
 	I will assess the paper by Salvaneschi et al. \cite{7827078} in regards of the following aspects:
 	\begin{itemize}
 		\item Applied scientific methods (foundation by Kapferer \cite{kapferer:2019:empirical} and others tbd.)
@@ -78,8 +80,10 @@
 
 
 
-	\section{Results}
+	\section{Review Results}
 	Is the conclusion of Salvaneschi et al. \cite{7827078} reasonable and well argued?
+
+
 
 	\section{Discussion}
 	Given the results, I will put RP in context with current trends in software engineering, in particular in its subdiscipline frontend engineering.
