--- a/index.tex
+++ b/index.tex
@@ -2,6 +2,9 @@
 \usepackage{ccicons}
 \usepackage{hyperref}
 
+\usepackage{listings}
+\lstset{numbers=left,frame=single}
+
 \begin{document}
 \twocolumn[{
 		\begin{centering}
@@ -66,7 +69,23 @@
 	What is it? Why?
 
 	\subsection{Observer pattern}
-	What is it? Why?
+	When dividing a large component into smaller sub components, we usually want these components to be as isolated as necessary so they become more reusable, hence target for loose coupling between them. Still, the new components need a way to interact with each other.
+
+	The observer pattern \cite{gamma1995design} defines an interface where \emph{observers} can subscribe to state change notifications of a \emph{subject}. Once notified, an \emph{observer} might query the \emph{subject} for its latest state and act accordingly to its implementation.
+
+	The \emph{EventTarget interface}\footnote{\url{https://dom.spec.whatwg.org/\#interface-eventtarget}} of the document object model \emph{(DOM)} API exposed to a browsers JavaScript runtime (among others) is an evolution of the observer pattern: An event handler (the \emph{observer}) can register to events emitted by an event target (the \emph{subject}). All registered event handlers will be called one after another once the event target disaptches (\emph{notifies}) an event. The handler might gain access to the event targets state via the provided event object.
+
+	\begin{lstlisting}
+window.addEventListener(
+  'click',
+  e => {
+    console.log(
+      'click',
+      e.target
+    );
+  }
+);
+	\end{lstlisting}
 
 	\section{Artifact Review}
 	Will not do: Review on statistic
