--- a/index.tex
+++ b/index.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,twocolumn]{article}
+\documentclass[12pt,a4paper]{article}
 \usepackage{ccicons}
 \usepackage{hyperref}
 \usepackage{minted}
@@ -6,118 +6,121 @@
 \setminted{autogobble=true, tabsize=2, linenos=true}
 
 \begin{document}
-\twocolumn[{
-		\begin{centering}
-			\huge{tbd. Design Sciences and Empirical Software Engineering / Reactive Programming}
-			\par
-			\vspace{2ex}
+\begin{centering}
+	\Huge{tbd. Design Sciences and Empirical Software Engineering / Reactive Programming}
+	\par
+	\vspace{2ex}
 
-			\large{
-				Manuel Alabor\\
-				Supervised by Prof. Dr. Olaf Zimmermann\\
-				University of Applied Sciences Rapperswil
-			}
-			\par
-			\vspace{2ex}
+	\normalsize{
+		Manuel Alabor\\
+		Supervised by Prof. Dr. Olaf Zimmermann\\
+		\par
+		\vspace{2ex}
+		HSR University of Applied Sciences Rapperswil\\
+		\par
+		\vspace{2ex}
+		\today
+	}
+	\par
+	\vspace{2ex}
 
-			\large{\today}
-			\par
-			\vspace{2ex}
+	\begin{quotation}
+		\small{
+			\textbf{Abstract}---\input{./abstract.tex}
+		}
+		\par
+		\vspace{2ex}
 
-			\small{
-				\textbf{Abstract}---\input{./abstract.tex}
-			}
-			\par
-			\vspace{2ex}
+		\small{
+			\textbf{Keywords}: tbd.
+		}
+		\par
+		\vspace{4ex}
+	\end{quotation}
+\end{centering}
 
-			\small{
-				\textbf{Keywords}: tbd.
-			}
-			\par
-			\vspace{4ex}
-		\end{centering}
-	}]
+\section{Introduction}
+Software engineering uses engineering principles when working with a software artifact \cite{159342} throughout its life cycle. Although \emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software} \cite{159342} may restrain us methodically, it is agreed upon that the process leading to a solution is of creative nature \cite{8051350}.
 
-	\section{Introduction}
-	Software engineering uses engineering principles when working with a software artifact \cite{159342} throughout its life cycle. Although \emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software} \cite{159342} may restrain us methodically, it is agreed upon that the process leading to a solution is of creative nature \cite{8051350}.
+Solving unique problems through the application of software engineering principles does not automatically lead to unique solutions in general. In fact, the emergence of recurring design patterns can be observed. Salvaneschi et al. \cite{7827078} challenge the observer pattern \cite{gamma1995design} and its impact on source code comprehensibility in comparison to the usage of reactive programming \emph{(RP)}.
 
-	Solving unique problems through the application of software engineering principles does not automatically lead to unique solutions in general. In fact, the emergence of recurring design patterns can be observed. Salvaneschi et al. \cite{7827078} challenge the observer pattern \cite{gamma1995design} and its impact on source code comprehensibility in comparison to the usage of reactive programming \emph{(RP)}.
+We will examine \emph{On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study} by Salvaneschi et al. \cite{7827078} and answer two sets of questions within this paper. Set \textbf{Q1} considers design sciences and empirical software engineering methods related points:
 
-	We will examine the artifact \cite{balestra:2019:designscience:articactandcontext} \textbf{A1} \emph{On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study} by Salvaneschi et al. \cite{7827078} and answer two sets of questions within this paper. Set \textbf{Q1} considers design sciences and empirical software engineering methods, approaches and concepts as first knowledge context \cite{balestra:2019:designscience:articactandcontext}:
+\begin{itemize}
+	\item \textbf{Q1.1}: Which empirical research methods, approaches and concepts were applied?
+	\item \textbf{Q1.2}: Are these research methods, approaches and concepts applied well, what could have been done better?
+	\item \textbf{Q1.3}: Does the paper meet FAIR principles \cite{2019arXiv190805986H} \cite{wilkinson:2016}?
+\end{itemize}
 
-	\begin{itemize}
-		\item \textbf{Q1.1}: Which empirical research methods, approaches and concepts were applied?
-		\item \textbf{Q1.2}: Are these research methods, approaches and concepts applied well, what could have been done better?
-		\item \textbf{Q1.3}: Does the paper meet FAIR principles \cite{2019arXiv190805986H} \cite{wilkinson:2016}?
-	\end{itemize}
+As the paper further compares RP with the observer pattern \cite{gamma1995design}, an equivalent based on object oriented programming \emph{(OOP)} paradigms, question set \textbf{Q2} reviews software engineering specific aspects:
 
-	As \textbf{A1} further compares RP with the observer pattern \cite{gamma1995design}, an equivalent based on object oriented programming \emph{(OOP)} paradigms, question set \textbf{Q2} obtains software engineering as the second knowledge context \cite{balestra:2019:designscience:articactandcontext}:
+\begin{itemize}
+	\item \textbf{Q2.1}: How does the paper define RP and OOP?
+	\item \textbf{Q2.2}: When should RP be considered, and when not?
+	\item \textbf{Q2.3}: Which experiments should be conducted in future work?
+	\item \textbf{Q2.4}: Which design alternatives exist (in a particular application context)?
+\end{itemize}
 
-	\begin{itemize}
-		\item \textbf{Q2.1}: How does the paper define RP and OOP?
-		\item \textbf{Q2.2}: When should RP be considered, and when not?
-		\item \textbf{Q2.3}: Which experiments should be conducted in future work?
-		\item \textbf{Q2.4}: Which design alternatives exist (in a particular application context)?
-	\end{itemize}
+In the following we will introduce and define important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \textbf{Q1} and \textbf{Q2.1}. The questions \textbf{Q2.2} through \textbf{Q2.4} will be tackled in section 4 where we discuss earlier findings.
 
-	In the following we will introduce and define important terms. Section 2 and 3 will examine \textbf{A1} and answer \textbf{Q1} and \textbf{Q2.1}. \textbf{Q2.2} through \textbf{Q2.4} will be tackled in section 4 where we discuss previous findings.
+\subsection{Empirical Software Engineering}
+What are those? Why in this paper?
 
-	\subsection{Design sciences}
-	Design science applies scientific research methods on a research projects themselves. It defines a methodical framework \cite{balestra:2019:designscience:articactandcontext} to describe, plan and execute a research project.
+\subsection{Design Science}
+Design science applies research project itself. More specifically, Roel J. Wieringa defines in his book \emph{Design Science Methodology for Information Systems and Software Engineering} \cite{wieringa} a methodical framework \cite{balestra:2019:designscience:articactandcontext} to describe, plan and execute a research project in the environment of software engineering.
 
-	\subsection{Empirical software engineering}
-	What are those? Why in this paper?
+\subsection{Reactive Programming}
+What is it? Why?
 
-	\subsection{Reactive programming}
-	What is it? Why?
+\subsection{Observer Pattern}
+When dividing a large component into smaller sub components, we usually want these components to be as isolated as necessary so they become more reusable, hence target for loose coupling between them. Still, the new components need a way to interact with each other.
 
-	\subsection{Observer pattern}
-	When dividing a large component into smaller sub components, we usually want these components to be as isolated as necessary so they become more reusable, hence target for loose coupling between them. Still, the new components need a way to interact with each other.
+The observer pattern \cite{gamma1995design} defines an interface where \emph{observers} can subscribe to state change notifications of a \emph{subject}. Once notified, an \emph{observer} might query the \emph{subject} for its latest state and act accordingly to its implementation.
 
-	The observer pattern \cite{gamma1995design} defines an interface where \emph{observers} can subscribe to state change notifications of a \emph{subject}. Once notified, an \emph{observer} might query the \emph{subject} for its latest state and act accordingly to its implementation.
+The \emph{EventTarget interface}\footnote{\url{https://dom.spec.whatwg.org/\#interface-eventtarget}} of the document object model \emph{(DOM)} API exposed to a browsers JavaScript runtime (among others) is an evolution of the observer pattern.
 
-	The \emph{EventTarget interface}\footnote{\url{https://dom.spec.whatwg.org/\#interface-eventtarget}} of the document object model \emph{(DOM)} API exposed to a browsers JavaScript runtime (among others) is an evolution of the observer pattern. Listing \ref{lst:eventtarget} shows how an event handler (the \emph{observer}) can register to events emitted by an event target (the \emph{subject}). All registered event handlers will be called one after another once the event target disaptches (\emph{notifies}) an event. The handler might gain access to the event targets state via the provided event object.
+\begin{listing}[H]
+	\begin{minted}{JavaScript}
+		window.addEventListener(
+		'click',
+		e => console.log('click', e.target)
+		);
+	\end{minted}
+	\caption{Register a click handler to an \emph{EventTarget}}
+	\label{lst:eventtarget}
+\end{listing}
 
-	\begin{listing}[H]
-		\begin{minted}{JavaScript}
-			window.addEventListener(
-				'click',
-				e => console.log('click', e.target)
-			);
-		\end{minted}
-		\caption{Register a click handler to an \emph{EventTarget}}
-		\label{lst:eventtarget}
-	\end{listing}
-
-
-	\section{Artifact Review}
-	Will not do: Review on statistic
-
-	I will assess the paper by Salvaneschi et al. \cite{7827078} in regards of the following aspects:
-	\begin{itemize}
-		\item Applied scientific methods (foundation by Kapferer \cite{kapferer:2019:empirical} and others tbd.)
-		\item Study setup
-		\item Challenge with FAIR Principles \cite{2019arXiv190805986H} \cite{wilkinson:2016}
-	\end{itemize}
+Listing \ref{lst:eventtarget} shows how an event handler (the \emph{observer}) can register to events emitted by an event target (the \emph{subject}). All registered event handlers will be called one after another once the event target dispatches (\emph{notifies}) an event. The handler might gain access to the event targets state via the provided event object.
 
 
+\section{Artifact Review}
+Will not do: Review on statistic
 
-	\section{Review Results}
-	Is the conclusion of Salvaneschi et al. \cite{7827078} reasonable and well argued?
+I will assess the paper by Salvaneschi et al. \cite{7827078} in regards of the following aspects:
+\begin{itemize}
+	\item Applied scientific methods (foundation by Kapferer \cite{kapferer:2019:empirical} and others tbd.)
+	\item Study setup
+	\item Challenge with FAIR Principles \cite{2019arXiv190805986H} \cite{wilkinson:2016}
+\end{itemize}
 
 
 
-	\section{Discussion}
-	Given the results, I will put RP in context with current trends in software engineering, in particular in its subdiscipline frontend engineering.
-	Ideas: RxJS, Elm, ReactJS \dots tbd.
+\section{Review Results}
+Is the conclusion of Salvaneschi et al. \cite{7827078} reasonable and well argued?
 
-	\section{Conclusion}
-	Summarize findings, give proposal for future work on topic.
 
-	\bibliographystyle{splncs04}
-	\bibliography{index}
 
-	\section*{License}
-	\ccby\thinspace\thinspace This work is licensed under a \href{https://creativecommons.org/licenses/by/4.0/}{Creative Commons Attribution 4.0 International License}.
+\section{Discussion}
+Given the results, I will put RP in context with current trends in software engineering, in particular in its subdiscipline frontend engineering.
+Ideas: RxJS, Elm, ReactJS \dots tbd.
+
+\section{Conclusion}
+Summarize findings, give proposal for future work on topic.
+
+\bibliographystyle{splncs04}
+\bibliography{index}
+
+\section*{License}
+\ccby\thinspace\thinspace This work is licensed under a \href{https://creativecommons.org/licenses/by/4.0/}{Creative Commons Attribution 4.0 International License}.
 
 \end{document}
