--- a/index.tex
+++ b/index.tex
@@ -3,6 +3,8 @@
 \usepackage{hyperref}
 \usepackage{minted}
 
+\newcommand{\version}{v0.1}
+
 \setminted{autogobble=true, tabsize=2, linenos=true}
 
 \begin{document}
@@ -19,7 +21,7 @@
 		HSR University of Applied Sciences Rapperswil\\
 		\par
 		\vspace{2ex}
-		\today
+		\today{} (\version)
 	}
 	\par
 	\vspace{2ex}
@@ -40,7 +42,7 @@
 \end{centering}
 
 \section{Introduction}
-Software engineering uses engineering principles when working with a software artifact \cite{159342} throughout its life cycle. Although \emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software} \cite{159342} may restrain us methodically, it is agreed upon that the process leading to a solution is of creative nature \cite{8051350}.
+Software engineering uses engineering principles when working with a software artifact \cite{159342} throughout its life cycle. Although ``\emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software}'' \cite{159342} may restrain us methodically, it is agreed upon that the process leading to a solution is of creative nature \cite{8051350}.
 
 Solving unique problems through the application of software engineering principles does not automatically lead to unique solutions in general. In fact, the emergence of recurring design patterns can be observed. Salvaneschi et al. \cite{7827078} challenge the observer pattern \cite{gamma1995design} and its impact on source code comprehensibility in comparison to the usage of reactive programming \emph{(RP)}.
 
