Write Empirical Software Engineering Intro

--- a/index.bib
+++ b/index.bib
@@ -85,3 +85,13 @@
 	doi={10.1109/SEAA.2017.21},
 	ISSN={},
 	month={Aug},}
+
+@book{deming,
+	title={Out of the Crisis},
+	author={Deming, W.E.},
+	isbn={9780262541152},
+	lccn={2001268898},
+	series={MIT Press},
+	year={2000},
+	publisher={Massachusetts Institute of Technology, Center for Advanced Engineering Study}
+}
