--- a/index.tex
+++ b/index.tex
@@ -43,11 +43,9 @@
 \end{centering}
 
 \section{Introduction}
-Software engineering uses engineering principles when working with a software artifact \cite{159342} throughout its life cycle. Although ``\emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software}'' \cite{159342} may restrain us methodically, it is agreed upon that the process leading to a solution is of creative nature \cite{8051350}.
-
 Solving unique problems through the application of software engineering principles does not automatically lead to unique solutions in general. In fact, the emergence of recurring design patterns can be observed. Salvaneschi et al. \cite{7827078} challenge the observer pattern \cite{gamma1995design} and its impact on source code comprehensibility in comparison to the usage of reactive programming \emph{(RP)}.
 
-We will examine \emph{On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study} by Salvaneschi et al. \cite{7827078} and answer two sets of questions within this paper. Set \textbf{Q1} considers design sciences and empirical software engineering methods related points:
+We will examine the paper \emph{On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study} by Salvaneschi et al. \cite{7827078} and answer two sets of questions within this paper. With the focus on  design sciences and empirical software engineering methods, set \textbf{Q1} considers the following three questions:
 
 \begin{itemize}
 	\item \textbf{Q1.1}: Which empirical research methods, approaches and concepts were applied?
@@ -55,7 +53,7 @@ We will examine \emph{On the Positive Effect of Reactive Programming on Software
 	\item \textbf{Q1.3}: Does the paper meet FAIR principles \cite{2019arXiv190805986H} \cite{wilkinson:2016}?
 \end{itemize}
 
-As the paper further compares RP with the observer pattern \cite{gamma1995design}, an equivalent based on object oriented programming \emph{(OOP)} paradigms, question set \textbf{Q2} reviews software engineering specific aspects:
+As the paper further compares RP with the observer pattern \cite{gamma1995design}, an equivalent based on object oriented programming \emph{(OOP)} paradigms, question set \textbf{Q2} reviews software engineering specific aspects of that comparison:
 
 \begin{itemize}
 	\item \textbf{Q2.1}: How does the paper define RP and OOP?
@@ -64,13 +62,20 @@ As the paper further compares RP with the observer pattern \cite{gamma1995design
 	\item \textbf{Q2.4}: Which design alternatives exist (in a particular application context)?
 \end{itemize}
 
-In the following we will introduce and define important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \textbf{Q1} and \textbf{Q2.1}. The questions \textbf{Q2.2} through \textbf{Q2.4} will be tackled in section 4 where we discuss earlier findings.
+In the following we will introduce and clarify important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \textbf{Q1} and \textbf{Q2.1}. The questions \textbf{Q2.2} through \textbf{Q2.4} will be tackled in section 4 where we discuss earlier findings.
 
 \subsection{Empirical Software Engineering}
-What are those? Why in this paper?
+Software engineering applies engineering principles when working with software artifacts \cite{159342} throughout their life cycle. Although ``\emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software (\dots)}'' \cite{159342} may rightful restrain us methodically, it is agreed upon that the process leading to a software product is of creative nature \cite{8051350}. It is this creative environment that keep the fundamental building blocks of software development, maintenance and operation in a constant flux of change. As tools and methods keep changing \cite{kapferer:2019:empirical}, software engineering organizations need to adapt to new circumstances often. Kapferer \cite{kapferer:2019:empirical} highlights in his introduction to empirical software engineering how the exertion of continuous quality improvement procedures like \emph{Plan/Do/Study/Act} \cite{deming} or an agile project setup like \emph{Scrum} leads to the controlled adoption of such. A reliable benchmark allows an organization to estimate feasibility of a new method or tool in advance as well as measure impact after its implementation.
+
+Hence software engineering problems lack analytical and scientific formalism, empirical research methods are applied in empirical software engineering to yield a representative benchmark for a problem domain.
+
+% lead over to design science
 
 \subsection{Design Science}
+% TODO
 Design science applies research project itself. More specifically, Roel J. Wieringa defines in his book \emph{Design Science Methodology for Information Systems and Software Engineering} \cite{wieringa} a methodical framework \cite{balestra:2019:designscience:articactandcontext} to describe, plan and execute a research project in the environment of software engineering.
+
+\subsection{FAIR Research Principles}
 
 \subsection{Reactive Programming}
 What is it? Why?
