Add Design Science Intro

--- a/index.bib
+++ b/index.bib
@@ -95,3 +95,12 @@
 	year={2000},
 	publisher={Massachusetts Institute of Technology, Center for Advanced Engineering Study}
 }
+
+@book{wieringa,
+	title={Design Science Methodology for Information Systems and Software Engineering},
+	author={Roel J. Wieringa},
+	year={2014},
+	doi={10.1007/978-3-662-43839-8},
+	publisher={Springer, Berlin, Heidelberg},
+	isbn={978-3-662-43839-8},
+}
