Reactive Programming & FAIR

--- a/index.bib
+++ b/index.bib
@@ -104,3 +104,16 @@
 	publisher={Springer, Berlin, Heidelberg},
 	isbn={978-3-662-43839-8},
 }
+
+@ARTICLE{8354906,
+	author={A. {Margara} and G. {Salvaneschi}},
+	journal={IEEE Transactions on Software Engineering},
+	title={On the Semantics of Distributed Reactive Programming: The Cost of Consistency},
+	year={2018},
+	volume={44},
+	number={7},
+	pages={689-711},
+	keywords={middleware;synchronization costs;distributed reactive programming demands;foundational approach;value updates;distributed reactive programming middleware;flexible consistency guarantees;reactive programming paradigm;reactive systems;time-changing values;distributed settings;Programming;Semantics;Artificial intelligence;Runtime;Middleware;Games;Computational modeling;Distributed reactive programming;consistency guarantees;reactive programming middleware;DREAM},
+	doi={10.1109/TSE.2018.2833109},
+	ISSN={},
+	month={July},}
